// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question adapter construct builds with attributes 1`] = `
Object {
  "solution": OboModel {
    "_isMocked": true,
    "content": Object {},
    "modelState": Object {},
  },
  "type": "default",
}
`;

exports[`Question adapter construct builds without attributes 1`] = `
Object {
  "solution": null,
  "type": "default",
}
`;

exports[`Question adapter toJSON builds a JSON representation 1`] = `
Object {
  "content": Object {
    "solution": null,
    "type": "default",
  },
}
`;

exports[`Question adapter toJSON builds a JSON representation with solution 1`] = `
Object {
  "content": Object {
    "solution": Object {
      "mockedToJSON": true,
    },
    "type": "default",
  },
}
`;
